--- a/chatgpt.html
+++ b/chatgpt.html
@@ -1,7 +1,7 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "Test",
-  "Description": "Test Message",
-  "DownloadLink": "https://google.com",
+  "Title": "Monytccc",
+  "Description": "Aplikasi Ini Membutuhkan Update Untuk Menjalankan Script Yang Ada Di Aplikasi ini",
+  "DownloadLink": "https://www.monytccc.eu.org",
   "Version": "11.13"
 }
