--- a/chatgpt.html
+++ b/chatgpt.html
@@ -2,6 +2,6 @@
   "Visibility": "VISIBLE",
   "Title": "Monytccc",
   "Description": "Aplikasi Ini Membutuhkan Update Untuk Menjalankan Script Yang Ada Di Aplikasi ini",
-  "DownloadLink": "https://www.monytccc.eu.org",
-  "Version": "11.11"
+  "DownloadLink": "https://raw.githubusercontent.com/Monytccc/App/main/AI_Massage.apk",
+  "Version": "16.16"
 }
