--- a/chatgpt.html
+++ b/chatgpt.html
@@ -2,6 +2,6 @@
   "Visibility": "VISIBLE",
   "Title": "Monytccc",
   "Description": "Aplikasi Ini Membutuhkan Update Untuk Menjalankan Script Yang Ada Di Aplikasi ini",
-  "DownloadLink": "https://raw.githubusercontent.com/Monytccc/App/main/AI_Massage.apk",
+  "DownloadLink": "https://files.monytccc.eu.org/AI_Massage.apk",
   "Version": "31.31"
 }
